--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<title>My APK Downloader</title>
+<meta name="description" content="Download safe and fast APK files for your favorite apps.">
+<meta name="keywords" content="APK, download, android apps, free apps">
+<meta name="robots" content="index, follow">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>APK Hub — Safe Downloads</title>
