--- a/index.html
+++ b/index.html
@@ -50,16 +50,23 @@
     <section id="about" class="container about">
       <h2>About</h2>
       <p>
-        APK Hub is a static website template for distributing **your own Android apps** or linking to
-        official download pages. The catalog is powered by a simple <code>apps.json</code> file you can edit anytime.
+        Welcome to GeatApp – your trusted place for downloading apps safely and easily.
+Our mission is to make app downloading simple, secure, and hassle-free.
+
+At GeatApp, we focus on:
+
+✅ Fast downloads without unnecessary steps
+
+✅ Safe files that are checked before publishing
+
+✅ User-friendly design so you can quickly find what you need
+
+
+We are constantly working to add more apps and features so that you always get the best downloading experience.
+
+Your support motivates us to grow and bring you the apps you love – faster and safer than ever. 🚀
       </p>
-      <ul>
-        <li>✔️ Mobile-first, fast, and accessible</li>
-        <li>✔️ SHA-256 checksum display</li>
-        <li>✔️ Search, sort, and badges</li>
-        <li>✔️ Works on Netlify, GitHub Pages, Vercel (static)</li>
-      </ul>
-    </section>
+  </section>
   </main>
 
   <footer class="site-footer">
