--- a/index.html
+++ b/index.html
@@ -52,19 +52,20 @@
       <p>
         Welcome to GeatApp – your trusted place for downloading apps safely and easily.
 Our mission is to make app downloading simple, secure, and hassle-free.
-
+<li>
 At GeatApp, we focus on:
-
+</li>
+<li>
 ✅ Fast downloads without unnecessary steps
-
+</li><li>
 ✅ Safe files that are checked before publishing
-
+</li><li>
 ✅ User-friendly design so you can quickly find what you need
 
-
+</li><li>
 We are constantly working to add more apps and features so that you always get the best downloading experience.
-
-Your support motivates us to grow and bring you the apps you love – faster and safer than ever. 🚀
+</li><li>
+Your support motivates us to grow and bring you the apps you love – faster and safer than ever. 🚀</li>
       </p>
   </section>
   </main>
