--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container header-inner">
       <a class="brand" href="/">
         <img src="assets/logo.svg" alt="APK Hub" class="logo" />
-        <span>APK Hub</span>
+        <span>GeatApp</span>
       </a>
       <nav class="nav">
         <a href="#apps">Apps</a>
