--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <main>
     <section class="hero">
       <div class="container hero-inner">
-        <h1>Publish & Share Your <span class="accent">APKs</span> Safely</h1>
-        <p class="sub">Host your own apps or link to official developer mirrors. No piracy. No malware.</p>
+        <h1>Download Smarter, Faster 🚀<span class="accent">APKs</span> Safely</h1>
+        <p class="sub">Get your favorite apps with just one click. Safe, fast, and simple </p>
         <div class="searchbar">
           <input id="search" type="search" placeholder="Search apps…" aria-label="Search apps" />
           <select id="sort">
