--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <main>
     <section class="hero">
       <div class="container hero-inner">
-        <h1>Download Smarter, Faster 🚀<span class="accent">APKs</span> Safely</h1>
+        <h1>Download Smarter, Faster 🚀<span class="accent">APKs</span></h1>
         <p class="sub">Get your favorite apps with just one click. Safe, fast, and simple </p>
         <div class="searchbar">
           <input id="search" type="search" placeholder="Search apps…" aria-label="Search apps" />
