--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@ Your support motivates us to grow and bring you the apps you love – faster and
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> APK Hub. All rights reserved.</p>
+      <p>© <span id="year"></span> Heat App. All rights reserved.</p>
       <div class="links">
         <button id="open-terms-footer" class="linkish">Terms & Disclaimer</button>
-        <a class="linkish" href="#about">About</a>
+       
       </div>
     </div>
   </footer>
