--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="/">
-        <img src="apks/FullLogo.png" alt="APK Hub" class="logo" />
+        <img src="apks/IMG_20250831_151514.png" alt="APK Hub" class="logo" />
         <span>GeatApp</span>
       </a>
       <nav class="nav">
