--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<meta name="google-site-verification" content="itEGE4bAYj1ePlgXvJKdiS7Cu-UNduWJzKs3aA0snyE" />
+
 <title>My APK Downloader</title>
 <meta name="description" content="Download safe and fast APK files for your favorite apps.">
 <meta name="keywords" content="APK, download, android apps, free apps">
