--- a/index.html
+++ b/index.html
@@ -1,48 +1,150 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>App Store</title>
-  <style>
-    body { font-family: Arial; background:#0d1117; color:#fff; padding:20px; }
-    .card {
-      background:#161b22; border-radius:10px; padding:15px; margin:15px 0;
-      display:flex; align-items:center; justify-content:space-between;
-    }
-    .info { flex:1; margin-left:15px; }
-    .info h2 { margin:0; font-size:20px; }
-    .info p { margin:5px 0; color:#ccc; font-size:14px; }
-    img { width:60px; height:60px; border-radius:12px; }
-    .btn {
-      background:#007bff; color:white; padding:10px 20px; border:none;
-      border-radius:6px; text-decoration:none; font-weight:bold;
-    }
-    .btn:hover { background:#0056b3; }
-  </style>
+  <meta name="google-site-verification" content="itEGE4bAYj1ePlgXvJKdiS7Cu-UNduWJzKs3aA0snyE" />
+  <title>My APK Downloader</title>
+  <meta name="description" content="Download safe and fast APK files for your favorite apps.">
+  <meta name="keywords" content="APK, download, android apps, free apps">
+  <meta name="robots" content="index, follow">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>APK Hub — Safe Downloads</title>
+  <meta name="description" content="Publish your own APKs or link to official developer mirrors. Clean, mobile-first design." />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="assets/logo.svg">
 </head>
 <body>
-  <h1>📱 My App Store</h1>
-  <div id="app-list"></div>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="/">
+        <img src="apks/IMG_20250831_151514.png" alt="APK Hub" class="logo" />
+        <span>GeatApp</span>
+      </a>
+      <nav class="nav">
+        <a href="#apps">Apps</a>
+        <a href="#about">About</a>
+        <button id="open-terms" class="btn btn-ghost">Terms</button>
+      </nav>
+    </div>
+  </header>
 
+  <main>
+    <section class="hero">
+      <div class="container hero-inner">
+        <h1>Download Smarter, Faster 🚀 <span class="accent">APKs</span></h1>
+        <p class="sub">Get your favorite apps with just one click. Safe, fast, and simple </p>
+        <div class="searchbar">
+          <input id="search" type="search" placeholder="Search apps…" aria-label="Search apps" />
+          <select id="sort">
+            <option value="name">Sort: Name</option>
+            <option value="updated">Sort: Last Updated</option>
+            <option value="size">Sort: Size</option>
+          </select>
+        </div>
+      </div>
+    </section>
+
+    <!-- Apps Section (JSON generated) -->
+    <section id="apps" class="container grid"></section>
+
+    <section id="about" class="container about">
+      <h2>About</h2>
+      <p>
+        Welcome to GeatApp – your trusted place for downloading apps safely and easily.
+        Our mission is to make app downloading simple, secure, and hassle-free.
+      <li>✅ Fast downloads without unnecessary steps</li>
+      <li>✅ Safe files that are checked before publishing</li>
+      <li>✅ User-friendly design so you can quickly find what you need</li>
+      <li>🚀 Always growing with new apps and features</li>
+      </p>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <p>© <span id="year"></span> Geat App. All rights reserved.</p>
+      <div class="links">
+        <button id="open-terms-footer" class="linkish">Terms & Disclaimer</button>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Terms Modal -->
+  <dialog id="terms" class="modal">
+    <form method="dialog" class="modal-card">
+      <h3>Terms & Disclaimer</h3>
+      <div class="modal-body">
+        <p>
+          This site is provided for distributing the owner’s apps or linking to official mirrors only.
+          By proceeding, you confirm you will not host or link to copyrighted or untrusted APKs.
+        </p>
+        <ul>
+          <li>No piracy. Respect developer licenses.</li>
+          <li>Verify checksums. Install at your own risk.</li>
+          <li>We don’t collect personal data.</li>
+        </ul>
+      </div>
+      <div class="modal-actions">
+        <button value="cancel" class="btn btn-ghost">Close</button>
+        <button id="accept-terms" class="btn">I Understand</button>
+      </div>
+    </form>
+  </dialog>
+
+  <!-- App Card Template -->
+  <template id="app-card">
+    <article class="card">
+      <div class="card-left">
+        <img class="app-icon" alt="App icon" />
+      </div>
+      <div class="card-right">
+        <div class="card-head">
+          <h3 class="app-name"></h3>
+          <span class="badge app-version"></span>
+        </div>
+        <p class="app-desc"></p>
+        <div class="meta">
+          <span class="chip size"></span>
+          <span class="chip updated"></span>
+          <span class="chip sdk"></span>
+        </div>
+        <div class="actions">
+          <a class="btn download" target="_blank" rel="noopener noreferrer">Get APK</a>
+          <button class="btn btn-ghost copy-hash" data-hash="">Copy SHA-256</button>
+        </div>
+      </div>
+    </article>
+  </template>
+
+  <!-- Scripts -->
   <script>
-    fetch("apps.json")
-      .then(res => res.json())
-      .then(data => {
-        let container = document.getElementById("app-list");
-        data.forEach(app => {
-          let card = document.createElement("div");
-          card.className = "card";
-          card.innerHTML = `
-            <img src="${app.icon}" alt="${app.name}">
-            <div class="info">
-              <h2>${app.name} <small>${app.version}</small></h2>
-              <p>Size: ${app.size} | Updated: ${app.updated}</p>
-              <p>Min SDK: ${app.minsdk}</p>
-            </div>
-            <a class="btn" href="${app.file}" download>Get APK</a>
-          `;
-          container.appendChild(card);
-        });
+    // Load current year
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    // Load Apps from apps.json
+    async function loadApps() {
+      const res = await fetch("apps.json");
+      const apps = await res.json();
+      const container = document.getElementById("apps");
+      const template = document.getElementById("app-card");
+
+      apps.forEach(app => {
+        const clone = template.content.cloneNode(true);
+        clone.querySelector(".app-icon").src = app.icon;
+        clone.querySelector(".app-name").textContent = app.name;
+        clone.querySelector(".app-version").textContent = app.version;
+        clone.querySelector(".app-desc").textContent = app.description;
+        clone.querySelector(".size").textContent = "📦 " + app.size;
+        clone.querySelector(".updated").textContent = "🗓 " + app.updated;
+        clone.querySelector(".sdk").textContent = "🔧 SDK " + app.sdk;
+        clone.querySelector(".download").href = app.download;
+        clone.querySelector(".copy-hash").setAttribute("data-hash", app.sha256);
+        container.appendChild(clone);
       });
+    }
+    loadApps();
   </script>
 </body>
 </html>
