--- a/index.html
+++ b/index.html
@@ -118,74 +118,41 @@
     </article>
   </template>
 
+ 
   <!-- Scripts -->
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
 
-    let appsData = []; // store full apps.json
-
+    // Load latest release from GitHub
     async function loadApps() {
-      try {
-        const res = await fetch("apps.json");
-        appsData = await res.json();
-        renderApps(appsData);
-      } catch (err) {
-        console.error("Failed to load apps.json", err);
-      }
-    }
+      const username = "altamasfilm";   // change to your GitHub username
+      const repo = "GeatApp";          // change to your repo name
 
-    function renderApps(apps) {
+      const res = await fetch(`https://api.github.com/repos/${username}/${repo}/releases/latest`);
+      const release = await res.json();
+
       const container = document.getElementById("apps");
       const template = document.getElementById("app-card");
-      container.innerHTML = ""; // clear old
 
-      apps.forEach(app => {
-        const clone = template.content.cloneNode(true);
-        clone.querySelector(".app-icon").src = app.icon;
-        clone.querySelector(".app-name").textContent = app.name;
-        clone.querySelector(".app-version").textContent = app.version;
-        clone.querySelector(".app-desc").textContent = app.description || "No description available.";
-        clone.querySelector(".size").textContent = "📦 " + app.size;
-        clone.querySelector(".updated").textContent = "🗓 " + app.updated;
-        clone.querySelector(".sdk").textContent = "🔧 SDK " + app.sdk;
-
-        // correct fields from apps.json
-        clone.querySelector(".download").href = app.file;
-        clone.querySelector(".copy-hash").setAttribute("data-hash", app.hash);
-
-        // copy hash
-        clone.querySelector(".copy-hash").addEventListener("click", () => {
-          navigator.clipboard.writeText(app.hash || "N/A");
-          alert("Hash copied: " + (app.hash || "N/A"));
-        });
-
-        container.appendChild(clone);
+      release.assets.forEach(asset => {
+        if (asset.name.endsWith(".apk")) {
+          const clone = template.content.cloneNode(true);
+          clone.querySelector(".app-icon").src = "apks/default.png"; // optional icon
+          clone.querySelector(".app-name").textContent = release.name;
+          clone.querySelector(".app-version").textContent = release.tag_name;
+          clone.querySelector(".app-desc").textContent = release.body || "Latest APK release.";
+          clone.querySelector(".size").textContent = "📦 " + (asset.size / (1024*1024)).toFixed(2) + " MB";
+          clone.querySelector(".updated").textContent = "🗓 " + new Date(release.published_at).toLocaleDateString();
+          clone.querySelector(".sdk").textContent = "🔧 SDK ?";
+          clone.querySelector(".download").href = asset.browser_download_url;
+          clone.querySelector(".copy-hash").setAttribute("data-hash", "Not generated");
+          container.appendChild(clone);
+        }
       });
     }
-
-    // search + sort logic
-    document.getElementById("search").addEventListener("input", function() {
-      const q = this.value.toLowerCase();
-      const filtered = appsData.filter(app => app.name.toLowerCase().includes(q));
-      renderApps(filtered);
-    });
-
-    document.getElementById("sort").addEventListener("change", function() {
-      const value = this.value;
-      let sorted = [...appsData];
-
-      if (value === "name") {
-        sorted.sort((a, b) => a.name.localeCompare(b.name));
-      } else if (value === "updated") {
-        sorted.sort((a, b) => new Date(b.updated) - new Date(a.updated));
-      } else if (value === "size") {
-        // assumes size in MB
-        sorted.sort((a, b) => parseFloat(a.size) - parseFloat(b.size));
-      }
-      renderApps(sorted);
-    });
-
     loadApps();
   </script>
+</body>
+</html>
 </body>
 </html>
