--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <script>
     async function loadLatestRelease() {
       const username = "Altamas1"; // 👈 change this
-      const repo = "geatapp";           // 👈 change this
+      const repo = "getapp";           // 👈 change this
       const url = `https://api.github.com/repos/${username}/${repo}/releases/latest`;
 
       try {
