--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             card.querySelector(".download").href = asset.browser_download_url;
             card.querySelector(".size").textContent = (asset.size / (1024*1024)).toFixed(2) + " MB";
             card.querySelector(".updated").textContent = "Updated: " + new Date(release.published_at).toLocaleDateString();
-            card.querySelector(".app-icon").src = "assets/logo.svg"; // 👈 set your app icon
+            card.querySelector(".app-icon").src = `icons/${release.name}.png`; // 👈 set your app icon
             appsContainer.appendChild(card);
           });
         } else {
